# stm32-cmake-project

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
.github/workflows/: c-cpp.yml
app/: CMakeLists.txt  main.c
bsp/: CMakeLists.txt
bsp/linker/: CMakeLists.txt
bsp/stm32f429/: CMakeLists.txt
bsp/stm32f429/linker/: CMakeLists.txt
bsp/stm32f429/startup/: CMakeLists.txt
